--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 </div>
 <div class="statusBar">
-    <ul class="list-inline"><li class="brand">Morsel</li><li><i id="soundStatus" class="status fa fa-tty"></i></li><li id="soundStatus"></li></ul>
+    <ul class="list-inline">
+      <li class="brand">Morsel</li>
+      <li><i id="soundStatus" class="status fa fa-tty"></i></li>
+      <li id="soundStatus"></li>
+      <li>A morse code dictation console built with <a href="https://github.com/scripting/concord">Concord</a>.</li>
+    </ul>
 </div>
 <div class="divOutlinerContainer">
     <div id="outliner">
